This file documents the revision history for Perl extension Gitalist.

    - Bump required version of Git::PurePerl for Encoding fixes.
    - Fix Makefile.PL to not need release deps when checking out of Git.

0.000005 2010-01-09
    - Switch to IPC::Run::start for streamed mode, fixing RT#52658
      and the tests with FreeBSD.
    - Require new FCGI release in the FCGI script for upstream bug fixes.
    - Fix tests with older versions of git.
    - Allow the model to be configured with a list of repositories rather
      then a directory containing repositories.
    - Fix syntax highlighting CSS link
    - Add per line link for previous version of a line in blame.

0.000004 2009-12-19
    - Support being able to pass a list of repositories to view via
      configuration, rather than having a static directory.
    - Installation and configuration documentation has been enhanced.
    - Project has been renamed Repository to correspond with normal git
      terminology.
    - Repos has been refactored into a CollectionOfRepositories role
      and two differnet concrete implementations (the Catalyst model
      chooses which type to build based on the config).
    - Remove all tabs and fix no tabs test (Dagfinn Ilmari Mannsåker)
    - Decode getpwuid values correctly (Dagfinn Ilmari Mannsåker)
    - Generate correct provides information in META.yml so that search.cpan
      indexes the classes contained in Gitalist correctly.

0.000003 2009-12-09
    - Officially switch repository to Shadowcat
    - Officially switch bug tracker to rt.cpan.org
    - Start streamlining and generally rejiging the layout.
    - Hacked in syntax highlighting to the blame view.
    - Further tweaks to the blame view, making it more informative.
    - Dropped the dependency on File::Stat::ModeString
    - Move all POD below the code, for ::Repo and ::Project.

0.000002 2009-12-06
   - Add documentation about how to configure a Gitalist instance.