@@ -1,10 +1,10 @@
 name Gitalist
 
-<Model::GitRepos>
+<Model::CollectionOfRepos>
     #git /path/to/git
     # Configure this to where your repositories are.
     # repo_dir __path_to(../)__
-</Model::GitRepos>
+</Model::CollectionOfRepos>
 
 sitename "A Gitalist"
 
