@@ -1,8 +1,8 @@
-<Model::GitRepos>
+<Model::CollectionOfRepos>
     # This is set so that if you run Gitalist out of a git checkout then you
     # can browse the repositories the directory level above your checkout.
     # This file is suppressed from the built dist by MANIFEST.SKIP, so you
     # don't have this config if you install from CPAN.
     repo_dir __path_to(../)__
-</Model::GitRepos>
+</Model::CollectionOfRepos>
 
