@@ -1,6 +1,6 @@
-<Model::GitRepos>
+<Model::CollectionOfRepos>
     repo_dir __path_to(t/lib/repositories)__
-</Model::GitRepos>
+</Model::CollectionOfRepos>
 
 name Gitalist
 
